# cloud-android-orchestration

./: .gcloudignore  .gitignore  Dockerfile  README.md  accountmanager.go  app.yaml  conf.toml  config.go  controller.go  errors.go  gaeusersaccountmanager.go  gcpim.go  gcpim_test.go  gcpinstancemanager.go  gcpinstancemanager_internal_test.go  gcpinstancemanager_test.go  go.mod  go.sum  main.go  osaccountmanager.go  placeholders.go  signalingserver.go  signalingserver_test.go  types.go
.github/: CODEOWNERS
.github/workflows/: artifacts_arm64.yaml  artifacts_x86_64.yaml  build_and_test.yaml  build_debian_packages.yaml  check_format.yaml  cvdremote_linux_continuous.yaml  cvdremote_macos_continuous.yaml  deployment.yaml  docker.yaml  docker_arm64.yaml  docker_x86_64.yaml  postsubmit.yaml  presubmit.yaml  test_build_deb.yaml  unstable-channel.yaml
api/v1/: instancemanager.go  signalingserver.go
app/: config.go  controller.go  controller_test.go  errors.go  placeholders.go  signalingserver.go  types.go
app/gcp/: instancemanager.go  instancemanager_test.go  usersaccountmanager.go
app/unix/: accountmanager.go  instancemanager.go
cmd/cloud_orchestrator/: main.go
cmd/cvdr/: main.go
cmd/cvdremote/: cvdremote  main.go
cmd/testw/: main.go
docs/: cloud_orchestrator.md  cvdr.md  development.md  docker.md  s3_state_backup.md
e2etests/: MODULE.bazel
e2etests/cvdr/: BUILD.bazel  README.md  common_utils.sh  cvdr_create_with_branch_test.sh  cvdr_create_with_local_srcs_test.sh  cvdr_host_create_test.sh
examples/s3-state-backup/: README.md  conf.toml
intercept/js/: server_connector.js
internal/app/: errors.go  gaeusersaccountmanager.go  osaccountmanager.go  placeholders.go  types.go
internal/cvdremote/: cvdremote.go  cvdremote_test.go
pkg/app/: app.go  app_test.go  config.go  controller.go  controller_test.go  errors.go  hostclient.go  signalingserver.go  signalingserver_test.go  types.go
pkg/cli/: adbserver.go  adbtunnel.go  adbtunnel_test.go  cli.go  cli_test.go  config.go  config_test.go  conn.go  cvd.go  cvd_test.go  host.go  load_config.pb.go  load_config.proto  testing.go
pkg/client/: client.go  client_test.go  host_orchestrator_client.go  httputils.go
pkg/metrics/: clientanalytics.pb.go  clientanalytics.proto  internal_user_log.pb.go  internal_user_log.proto  metrics.go  metrics_test.go
scripts/: goutil  presubmit.sh
scripts/docker/: Dockerfile  cloud-orchestrator-runner.sh  conf.toml  cvdr.toml  image-builder.sh  image-runner.sh  run.sh
(+198 files in other folders)
