load("@rules_shell//shell:sh_library.bzl", "sh_library")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

sh_library(
    name = "cvdr_common_utils",
    srcs = ["common_utils.sh"],
)

sh_test(
    name = "cvdr_host_create_test",
    srcs = ["cvdr_host_create_test.sh"],
    data = [":cvdr_common_utils"],
)

sh_test(
    name = "cvdr_create_with_branch_test",
    srcs = ["cvdr_create_with_branch_test.sh"],
    data = [":cvdr_common_utils"],
)

sh_test(
    name = "cvdr_create_with_local_srcs_test",
    srcs = ["cvdr_create_with_local_srcs_test.sh"],
    data = [
        ":cvdr_common_utils",
        "@aosp_artifact//:cvd_host_package",
        "@aosp_artifact//:images_zip",
    ],
)
